<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Higster</string>
    <string name="title_activity_cafeteria">SOPPERN Cafeteria</string>
    <string name="hello_world">This is the main screen with links to maps, check ins, lunch menu and timeedit</string>
    <string name="action_settings">Settings</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="maps">Maps</string>
    <string name="checkins">Check in</string>
    <string name="timeedit">Schedule</string>
    <string name="getting_data">Getting data ...</string>
    <string name="cafeteria_contact">Contact</string>
    <string name="cafeteria_update">Update</string>
    <string name="cafeteria_facebook">Like on Facebook</string>
    <string name="cafeteria_current_week">Dinner menu this week:</string>
    <string name="cafeteria_contact_title">SOPP Cafeteria Gjøvik</string>
    <string name="cafeteria_desc">The Student cafeterias are a natural meeting place for students at campus.
       \n\nWe can offer you a varied menu, which includes vegetarian food. Menus are designed keeping in mind that most students live on a tight budget. </string>
    <string name="cafeteria_contact_info">Phone: +47 612 87 427\nE-mail: berit.grina.wold@sopp.no</string>
    <string name="cafeteria_opening">08.00 - 17.00 (Mon-Thu), 08.00 - 15.00 (Fri)</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_helpdesk">HelpdeskActivity</string>

</resources>
