<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/cafeteria_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cafeteria_current_week"
        android:id="@+id/tv_weekTitle"
        android:layout_below="@+id/tv_description"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dinnerList"
        android:layout_below="@+id/tv_weekTitle"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/dinnerList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cafeteria_opening"
        android:id="@+id/tv_openingHors"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
