<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--
    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    -->

    <Button
        android:id="@+id/mapsButton"
        android:text="@string/maps"
        android:textColor="#424242"
        android:textSize="20sp"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:onClick="startMapsActivity"
        android:layout_above="@+id/cafeteriaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/cafeteriaButton"
        android:text="@string/cafeteria"
        android:textColor="#424242"
        android:textSize="20sp"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:onClick="startCafeteriaActivity"
        android:layout_above="@+id/helpdeskButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/helpdeskButton"
        android:text="@string/title_activity_helpdesk"
        android:textColor="#424242"
        android:textSize="20sp"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:onClick="startHelpdeskActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
